--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "dev": "NODE_ENV=development nodemon backend/index.js",
+    "build": "npm install && npm install --prefix frontend &&  npm run build --prefix frontend",
+    "start": "NODE_ENV=production node backend/index.js"
   },
   "author": "",
   "license": "ISC",
